--- a/002_css_assignment/badges/index.html
+++ b/002_css_assignment/badges/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Badges</title>
 </head>
+
 <body>
-    
+
+
+    <main>
+        <section class="container">
+            <h3 class="container__title">Badge Overview</h3>
+            <div>
+                <p class="label">Text with a badge <span class="badge badge__right">4</span></p>
+                <p class="label">Text with large badge <span class="badge badge__right badge__large">4</span></p>
+                <p class="label">button with badge on the left <button class="label button__primary">Action <span
+                            class="badge badge__left badge__red">4</span></button></p>
+                <p class="label">Icon with a badge <span class="label"> <img
+                            src="https://img.icons8.com/external-kiranshastry-solid-kiranshastry/28/000000/external-notification-multimedia-kiranshastry-solid-kiranshastry.png" /><span
+                            class="badge badge__right badge__red badge__icon">4</span></span></p>
+            </div>
+        </section>
+    </main>
+
+
+
 </body>
+
 </html>
