style: tabs design

--- a/002_css_assignment/dialogs/index.html
+++ b/002_css_assignment/dialogs/index.html
@@ -15,7 +15,7 @@
 <body>
     <main>
 
-        <div class="container flex__row center__container dialog__bg">
+        <div class="container flex__row center__container container__bg">
 
             <!-- Alert - side by side -->
             <div class="dialog__container card">
