chore: file restructure

--- a/002_css_assignment/badges/index.html
+++ b/002_css_assignment/badges/index.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="badges.css">
     <title>Badges</title>
 </head>
 
 <body>
-
 
     <main>
         <section class="container">
@@ -20,7 +19,7 @@
                 <p class="label">Text with large badge <span class="badge badge__right badge__large">4</span></p>
                 <p class="label">button with badge on the left <button class="label button__primary">Action <span
                             class="badge badge__left badge__red">4</span></button></p>
-                <p class="label">Icon with a badge <span class="label"> <img
+                <p class="label">Icon with a badge <span class="label"><img
                             src="https://img.icons8.com/external-kiranshastry-solid-kiranshastry/28/000000/external-notification-multimedia-kiranshastry-solid-kiranshastry.png" /><span
                             class="badge badge__right badge__red badge__icon">4</span></span></p>
             </div>
