--- a/002_css_assignment/cards/index.html
+++ b/002_css_assignment/cards/index.html
@@ -8,21 +8,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="card-basic.css">
-    <link rel="stylesheet" href="card-header.css">
-    <link rel="stylesheet" href="card-horizontal.css">
-    <link rel="stylesheet" href="card-only-btns.css">
-    <link rel="stylesheet" href="card-only-icons.css">
-    <link rel="stylesheet" href="card-text-over-media.css">
+    
+    <link rel="stylesheet" href="cards.css">
     <title>Cards</title>
 </head>
 
 <body>
 
     <main>
-        <section class="container">
+        <section class="container flex__row">
 
             <!-- ********* card 1 ********* -->
 
