--- a/002_css_assignment/chips/index.html
+++ b/002_css_assignment/chips/index.html
@@ -5,9 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="basic-chips.css">
-    <link rel="stylesheet" href="stacked-chips.css">
+    <link rel="stylesheet" href="chips.css">
     <title>Chips</title>
 </head>
 
