--- a/002_css_assignment/drawer/index.html
+++ b/002_css_assignment/drawer/index.html
@@ -9,7 +9,7 @@
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="drawer.css">
     <title>Drawers</title>
 </head>
 
